@@ -1,5 +1,8 @@
 2011-09-14  Andreas Kupries  <andreask@activestate.com>
 
+	* doc/instance.inc: Extended documentation and testsuite, covering
+	* tests/topology.test: instance methods 'type' and 'width'.
+
 	* tests/topology.test: Started conversion to proper testsuite, and
 	  expansion to all instance methods.
 
